fix horizontal scroll issue

--- a/src/styles/components/_details.scss
+++ b/src/styles/components/_details.scss
@@ -116,10 +116,13 @@
 
 .panel {
   position: relative;
+  width: 100%;
   height: 100%;
 }
 
 .panel__pane {
+  width: 100%;
+  max-width: 100%;
   height: 100%;
 }
 
